Bindings for JDK22