@@ -2,250 +2,752 @@
 
 package freeglut.windows.x86;
 
-import java.lang.invoke.MethodHandle;
-import java.lang.invoke.VarHandle;
-import java.nio.ByteOrder;
+import java.lang.invoke.*;
 import java.lang.foreign.*;
+import java.nio.ByteOrder;
+import java.util.*;
+import java.util.function.*;
+import java.util.stream.*;
+
 import static java.lang.foreign.ValueLayout.*;
+import static java.lang.foreign.MemoryLayout.PathElement.*;
+
+/**
+ * {@snippet lang=c :
+ * struct {
+ *     DWORD Revision;
+ *     BYTE MaxThrottle;
+ *     BYTE MinThrottle;
+ *     BYTE BusyAdjThreshold;
+ *     union {
+ *         BYTE Spare;
+ *         union {
+ *             BYTE AsBYTE;
+ *             struct {
+ *                 BYTE NoDomainAccounting : 1;
+ *                 BYTE IncreasePolicy : 2;
+ *                 BYTE DecreasePolicy : 2;
+ *                 BYTE Reserved : 3;
+ *             };
+ *         } Flags;
+ *     };
+ *     DWORD TimeCheck;
+ *     DWORD IncreaseTime;
+ *     DWORD DecreaseTime;
+ *     DWORD IncreasePercent;
+ *     DWORD DecreasePercent;
+ * }
+ * }
+ */
 public class PROCESSOR_PERFSTATE_POLICY {
 
-    static final  GroupLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        Constants$root.C_LONG$LAYOUT.withName("Revision"),
-        Constants$root.C_CHAR$LAYOUT.withName("MaxThrottle"),
-        Constants$root.C_CHAR$LAYOUT.withName("MinThrottle"),
-        Constants$root.C_CHAR$LAYOUT.withName("BusyAdjThreshold"),
+    PROCESSOR_PERFSTATE_POLICY() {
+        // Should not be called directly
+    }
+
+    private static final GroupLayout $LAYOUT = MemoryLayout.structLayout(
+        freeglut_h.C_LONG.withName("Revision"),
+        freeglut_h.C_CHAR.withName("MaxThrottle"),
+        freeglut_h.C_CHAR.withName("MinThrottle"),
+        freeglut_h.C_CHAR.withName("BusyAdjThreshold"),
         MemoryLayout.unionLayout(
-            Constants$root.C_CHAR$LAYOUT.withName("Spare"),
-            MemoryLayout.unionLayout(
-                Constants$root.C_CHAR$LAYOUT.withName("AsBYTE"),
-                MemoryLayout.structLayout(
-                    MemoryLayout.structLayout(
-                        MemoryLayout.paddingLayout(1).withName("NoDomainAccounting"),
-                        MemoryLayout.paddingLayout(2).withName("IncreasePolicy"),
-                        MemoryLayout.paddingLayout(2).withName("DecreasePolicy"),
-                        MemoryLayout.paddingLayout(3).withName("Reserved")
-                    )
-                ).withName("$anon$0")
-            ).withName("Flags")
-        ).withName("$anon$0"),
-        Constants$root.C_LONG$LAYOUT.withName("TimeCheck"),
-        Constants$root.C_LONG$LAYOUT.withName("IncreaseTime"),
-        Constants$root.C_LONG$LAYOUT.withName("DecreaseTime"),
-        Constants$root.C_LONG$LAYOUT.withName("IncreasePercent"),
-        Constants$root.C_LONG$LAYOUT.withName("DecreasePercent")
-    );
-    public static MemoryLayout $LAYOUT() {
-        return PROCESSOR_PERFSTATE_POLICY.$struct$LAYOUT;
+            freeglut_h.C_CHAR.withName("Spare"),
+            PROCESSOR_PERFSTATE_POLICY.Flags.layout().withName("Flags")
+        ).withName("$anon$16711:5"),
+        freeglut_h.C_LONG.withName("TimeCheck"),
+        freeglut_h.C_LONG.withName("IncreaseTime"),
+        freeglut_h.C_LONG.withName("DecreaseTime"),
+        freeglut_h.C_LONG.withName("IncreasePercent"),
+        freeglut_h.C_LONG.withName("DecreasePercent")
+    ).withName("$anon$16706:9");
+
+    /**
+     * The layout of this struct
+     */
+    public static final GroupLayout layout() {
+        return $LAYOUT;
     }
-    static final VarHandle Revision$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("Revision"));
-    public static VarHandle Revision$VH() {
-        return PROCESSOR_PERFSTATE_POLICY.Revision$VH;
+
+    private static final OfInt Revision$LAYOUT = (OfInt)$LAYOUT.select(groupElement("Revision"));
+
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * DWORD Revision
+     * }
+     */
+    public static final OfInt Revision$layout() {
+        return Revision$LAYOUT;
     }
-    public static int Revision$get(MemorySegment seg) {
-        return (int)PROCESSOR_PERFSTATE_POLICY.Revision$VH.get(seg);
+
+    private static final long Revision$OFFSET = 0;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * DWORD Revision
+     * }
+     */
+    public static final long Revision$offset() {
+        return Revision$OFFSET;
     }
-    public static void Revision$set( MemorySegment seg, int x) {
-        PROCESSOR_PERFSTATE_POLICY.Revision$VH.set(seg, x);
+
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * DWORD Revision
+     * }
+     */
+    public static int Revision(MemorySegment struct) {
+        return struct.get(Revision$LAYOUT, Revision$OFFSET);
     }
-    public static int Revision$get(MemorySegment seg, long index) {
-        return (int)PROCESSOR_PERFSTATE_POLICY.Revision$VH.get(seg.asSlice(index*sizeof()));
+
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * DWORD Revision
+     * }
+     */
+    public static void Revision(MemorySegment struct, int fieldValue) {
+        struct.set(Revision$LAYOUT, Revision$OFFSET, fieldValue);
     }
-    public static void Revision$set(MemorySegment seg, long index, int x) {
-        PROCESSOR_PERFSTATE_POLICY.Revision$VH.set(seg.asSlice(index*sizeof()), x);
+
+    private static final OfByte MaxThrottle$LAYOUT = (OfByte)$LAYOUT.select(groupElement("MaxThrottle"));
+
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * BYTE MaxThrottle
+     * }
+     */
+    public static final OfByte MaxThrottle$layout() {
+        return MaxThrottle$LAYOUT;
     }
-    static final VarHandle MaxThrottle$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("MaxThrottle"));
-    public static VarHandle MaxThrottle$VH() {
-        return PROCESSOR_PERFSTATE_POLICY.MaxThrottle$VH;
+
+    private static final long MaxThrottle$OFFSET = 4;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * BYTE MaxThrottle
+     * }
+     */
+    public static final long MaxThrottle$offset() {
+        return MaxThrottle$OFFSET;
     }
-    public static byte MaxThrottle$get(MemorySegment seg) {
-        return (byte)PROCESSOR_PERFSTATE_POLICY.MaxThrottle$VH.get(seg);
+
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * BYTE MaxThrottle
+     * }
+     */
+    public static byte MaxThrottle(MemorySegment struct) {
+        return struct.get(MaxThrottle$LAYOUT, MaxThrottle$OFFSET);
     }
-    public static void MaxThrottle$set( MemorySegment seg, byte x) {
-        PROCESSOR_PERFSTATE_POLICY.MaxThrottle$VH.set(seg, x);
+
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * BYTE MaxThrottle
+     * }
+     */
+    public static void MaxThrottle(MemorySegment struct, byte fieldValue) {
+        struct.set(MaxThrottle$LAYOUT, MaxThrottle$OFFSET, fieldValue);
     }
-    public static byte MaxThrottle$get(MemorySegment seg, long index) {
-        return (byte)PROCESSOR_PERFSTATE_POLICY.MaxThrottle$VH.get(seg.asSlice(index*sizeof()));
+
+    private static final OfByte MinThrottle$LAYOUT = (OfByte)$LAYOUT.select(groupElement("MinThrottle"));
+
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * BYTE MinThrottle
+     * }
+     */
+    public static final OfByte MinThrottle$layout() {
+        return MinThrottle$LAYOUT;
     }
-    public static void MaxThrottle$set(MemorySegment seg, long index, byte x) {
-        PROCESSOR_PERFSTATE_POLICY.MaxThrottle$VH.set(seg.asSlice(index*sizeof()), x);
+
+    private static final long MinThrottle$OFFSET = 5;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * BYTE MinThrottle
+     * }
+     */
+    public static final long MinThrottle$offset() {
+        return MinThrottle$OFFSET;
     }
-    static final VarHandle MinThrottle$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("MinThrottle"));
-    public static VarHandle MinThrottle$VH() {
-        return PROCESSOR_PERFSTATE_POLICY.MinThrottle$VH;
+
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * BYTE MinThrottle
+     * }
+     */
+    public static byte MinThrottle(MemorySegment struct) {
+        return struct.get(MinThrottle$LAYOUT, MinThrottle$OFFSET);
     }
-    public static byte MinThrottle$get(MemorySegment seg) {
-        return (byte)PROCESSOR_PERFSTATE_POLICY.MinThrottle$VH.get(seg);
+
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * BYTE MinThrottle
+     * }
+     */
+    public static void MinThrottle(MemorySegment struct, byte fieldValue) {
+        struct.set(MinThrottle$LAYOUT, MinThrottle$OFFSET, fieldValue);
     }
-    public static void MinThrottle$set( MemorySegment seg, byte x) {
-        PROCESSOR_PERFSTATE_POLICY.MinThrottle$VH.set(seg, x);
+
+    private static final OfByte BusyAdjThreshold$LAYOUT = (OfByte)$LAYOUT.select(groupElement("BusyAdjThreshold"));
+
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * BYTE BusyAdjThreshold
+     * }
+     */
+    public static final OfByte BusyAdjThreshold$layout() {
+        return BusyAdjThreshold$LAYOUT;
     }
-    public static byte MinThrottle$get(MemorySegment seg, long index) {
-        return (byte)PROCESSOR_PERFSTATE_POLICY.MinThrottle$VH.get(seg.asSlice(index*sizeof()));
+
+    private static final long BusyAdjThreshold$OFFSET = 6;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * BYTE BusyAdjThreshold
+     * }
+     */
+    public static final long BusyAdjThreshold$offset() {
+        return BusyAdjThreshold$OFFSET;
     }
-    public static void MinThrottle$set(MemorySegment seg, long index, byte x) {
-        PROCESSOR_PERFSTATE_POLICY.MinThrottle$VH.set(seg.asSlice(index*sizeof()), x);
+
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * BYTE BusyAdjThreshold
+     * }
+     */
+    public static byte BusyAdjThreshold(MemorySegment struct) {
+        return struct.get(BusyAdjThreshold$LAYOUT, BusyAdjThreshold$OFFSET);
     }
-    static final VarHandle BusyAdjThreshold$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("BusyAdjThreshold"));
-    public static VarHandle BusyAdjThreshold$VH() {
-        return PROCESSOR_PERFSTATE_POLICY.BusyAdjThreshold$VH;
+
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * BYTE BusyAdjThreshold
+     * }
+     */
+    public static void BusyAdjThreshold(MemorySegment struct, byte fieldValue) {
+        struct.set(BusyAdjThreshold$LAYOUT, BusyAdjThreshold$OFFSET, fieldValue);
     }
-    public static byte BusyAdjThreshold$get(MemorySegment seg) {
-        return (byte)PROCESSOR_PERFSTATE_POLICY.BusyAdjThreshold$VH.get(seg);
+
+    private static final OfByte Spare$LAYOUT = (OfByte)$LAYOUT.select(groupElement("$anon$16711:5"), groupElement("Spare"));
+
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * BYTE Spare
+     * }
+     */
+    public static final OfByte Spare$layout() {
+        return Spare$LAYOUT;
     }
-    public static void BusyAdjThreshold$set( MemorySegment seg, byte x) {
-        PROCESSOR_PERFSTATE_POLICY.BusyAdjThreshold$VH.set(seg, x);
+
+    private static final long Spare$OFFSET = 7;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * BYTE Spare
+     * }
+     */
+    public static final long Spare$offset() {
+        return Spare$OFFSET;
     }
-    public static byte BusyAdjThreshold$get(MemorySegment seg, long index) {
-        return (byte)PROCESSOR_PERFSTATE_POLICY.BusyAdjThreshold$VH.get(seg.asSlice(index*sizeof()));
+
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * BYTE Spare
+     * }
+     */
+    public static byte Spare(MemorySegment struct) {
+        return struct.get(Spare$LAYOUT, Spare$OFFSET);
     }
-    public static void BusyAdjThreshold$set(MemorySegment seg, long index, byte x) {
-        PROCESSOR_PERFSTATE_POLICY.BusyAdjThreshold$VH.set(seg.asSlice(index*sizeof()), x);
+
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * BYTE Spare
+     * }
+     */
+    public static void Spare(MemorySegment struct, byte fieldValue) {
+        struct.set(Spare$LAYOUT, Spare$OFFSET, fieldValue);
     }
-    static final VarHandle Spare$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("$anon$0"), MemoryLayout.PathElement.groupElement("Spare"));
-    public static VarHandle Spare$VH() {
-        return PROCESSOR_PERFSTATE_POLICY.Spare$VH;
-    }
-    public static byte Spare$get(MemorySegment seg) {
-        return (byte)PROCESSOR_PERFSTATE_POLICY.Spare$VH.get(seg);
-    }
-    public static void Spare$set( MemorySegment seg, byte x) {
-        PROCESSOR_PERFSTATE_POLICY.Spare$VH.set(seg, x);
-    }
-    public static byte Spare$get(MemorySegment seg, long index) {
-        return (byte)PROCESSOR_PERFSTATE_POLICY.Spare$VH.get(seg.asSlice(index*sizeof()));
-    }
-    public static void Spare$set(MemorySegment seg, long index, byte x) {
-        PROCESSOR_PERFSTATE_POLICY.Spare$VH.set(seg.asSlice(index*sizeof()), x);
-    }
+
+    /**
+     * {@snippet lang=c :
+     * union {
+     *     BYTE AsBYTE;
+     *     struct {
+     *         BYTE NoDomainAccounting : 1;
+     *         BYTE IncreasePolicy : 2;
+     *         BYTE DecreasePolicy : 2;
+     *         BYTE Reserved : 3;
+     *     };
+     * }
+     * }
+     */
     public static class Flags {
 
-        static final  GroupLayout Flags$union$LAYOUT = MemoryLayout.unionLayout(
-            Constants$root.C_CHAR$LAYOUT.withName("AsBYTE"),
+        Flags() {
+            // Should not be called directly
+        }
+
+        private static final GroupLayout $LAYOUT = MemoryLayout.unionLayout(
+            freeglut_h.C_CHAR.withName("AsBYTE"),
             MemoryLayout.structLayout(
-                MemoryLayout.structLayout(
-                    MemoryLayout.paddingLayout(1).withName("NoDomainAccounting"),
-                    MemoryLayout.paddingLayout(2).withName("IncreasePolicy"),
-                    MemoryLayout.paddingLayout(2).withName("DecreasePolicy"),
-                    MemoryLayout.paddingLayout(3).withName("Reserved")
-                )
-            ).withName("$anon$0")
-        );
-        public static MemoryLayout $LAYOUT() {
-            return Flags.Flags$union$LAYOUT;
+                MemoryLayout.paddingLayout(1)
+            ).withName("$anon$16715:13")
+        ).withName("$anon$16713:9");
+
+        /**
+         * The layout of this union
+         */
+        public static final GroupLayout layout() {
+            return $LAYOUT;
         }
-        static final VarHandle AsBYTE$VH = Flags$union$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("AsBYTE"));
-        public static VarHandle AsBYTE$VH() {
-            return Flags.AsBYTE$VH;
+
+        private static final OfByte AsBYTE$LAYOUT = (OfByte)$LAYOUT.select(groupElement("AsBYTE"));
+
+        /**
+         * Layout for field:
+         * {@snippet lang=c :
+         * BYTE AsBYTE
+         * }
+         */
+        public static final OfByte AsBYTE$layout() {
+            return AsBYTE$LAYOUT;
         }
-        public static byte AsBYTE$get(MemorySegment seg) {
-            return (byte)Flags.AsBYTE$VH.get(seg);
+
+        private static final long AsBYTE$OFFSET = 0;
+
+        /**
+         * Offset for field:
+         * {@snippet lang=c :
+         * BYTE AsBYTE
+         * }
+         */
+        public static final long AsBYTE$offset() {
+            return AsBYTE$OFFSET;
         }
-        public static void AsBYTE$set( MemorySegment seg, byte x) {
-            Flags.AsBYTE$VH.set(seg, x);
+
+        /**
+         * Getter for field:
+         * {@snippet lang=c :
+         * BYTE AsBYTE
+         * }
+         */
+        public static byte AsBYTE(MemorySegment union) {
+            return union.get(AsBYTE$LAYOUT, AsBYTE$OFFSET);
         }
-        public static byte AsBYTE$get(MemorySegment seg, long index) {
-            return (byte)Flags.AsBYTE$VH.get(seg.asSlice(index*sizeof()));
+
+        /**
+         * Setter for field:
+         * {@snippet lang=c :
+         * BYTE AsBYTE
+         * }
+         */
+        public static void AsBYTE(MemorySegment union, byte fieldValue) {
+            union.set(AsBYTE$LAYOUT, AsBYTE$OFFSET, fieldValue);
         }
-        public static void AsBYTE$set(MemorySegment seg, long index, byte x) {
-            Flags.AsBYTE$VH.set(seg.asSlice(index*sizeof()), x);
+
+        /**
+         * Obtains a slice of {@code arrayParam} which selects the array element at {@code index}.
+         * The returned segment has address {@code arrayParam.address() + index * layout().byteSize()}
+         */
+        public static MemorySegment asSlice(MemorySegment array, long index) {
+            return array.asSlice(layout().byteSize() * index);
         }
-        public static long sizeof() { return $LAYOUT().byteSize(); }
-        public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
-        public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
-            return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
+
+        /**
+         * The size (in bytes) of this union
+         */
+        public static long sizeof() { return layout().byteSize(); }
+
+        /**
+         * Allocate a segment of size {@code layout().byteSize()} using {@code allocator}
+         */
+        public static MemorySegment allocate(SegmentAllocator allocator) {
+            return allocator.allocate(layout());
         }
-        public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
+
+        /**
+         * Allocate an array of size {@code elementCount} using {@code allocator}.
+         * The returned segment has size {@code elementCount * layout().byteSize()}.
+         */
+        public static MemorySegment allocateArray(long elementCount, SegmentAllocator allocator) {
+            return allocator.allocate(MemoryLayout.sequenceLayout(elementCount, layout()));
+        }
+
+        /**
+         * Reinterprets {@code addr} using target {@code arena} and {@code cleanupAction} (if any).
+         * The returned segment has size {@code layout().byteSize()}
+         */
+        public static MemorySegment reinterpret(MemorySegment addr, Arena arena, Consumer<MemorySegment> cleanup) {
+            return reinterpret(addr, 1, arena, cleanup);
+        }
+
+        /**
+         * Reinterprets {@code addr} using target {@code arena} and {@code cleanupAction} (if any).
+         * The returned segment has size {@code elementCount * layout().byteSize()}
+         */
+        public static MemorySegment reinterpret(MemorySegment addr, long elementCount, Arena arena, Consumer<MemorySegment> cleanup) {
+            return addr.reinterpret(layout().byteSize() * elementCount, arena, cleanup);
+        }
     }
 
-    public static MemorySegment Flags$slice(MemorySegment seg) {
-        return seg.asSlice(7, 1);
+    private static final GroupLayout Flags$LAYOUT = (GroupLayout)$LAYOUT.select(groupElement("$anon$16711:5"), groupElement("Flags"));
+
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * union {
+     *     BYTE AsBYTE;
+     *     struct {
+     *         BYTE NoDomainAccounting : 1;
+     *         BYTE IncreasePolicy : 2;
+     *         BYTE DecreasePolicy : 2;
+     *         BYTE Reserved : 3;
+     *     };
+     * } Flags
+     * }
+     */
+    public static final GroupLayout Flags$layout() {
+        return Flags$LAYOUT;
     }
-    static final VarHandle TimeCheck$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("TimeCheck"));
-    public static VarHandle TimeCheck$VH() {
-        return PROCESSOR_PERFSTATE_POLICY.TimeCheck$VH;
+
+    private static final long Flags$OFFSET = 7;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * union {
+     *     BYTE AsBYTE;
+     *     struct {
+     *         BYTE NoDomainAccounting : 1;
+     *         BYTE IncreasePolicy : 2;
+     *         BYTE DecreasePolicy : 2;
+     *         BYTE Reserved : 3;
+     *     };
+     * } Flags
+     * }
+     */
+    public static final long Flags$offset() {
+        return Flags$OFFSET;
     }
-    public static int TimeCheck$get(MemorySegment seg) {
-        return (int)PROCESSOR_PERFSTATE_POLICY.TimeCheck$VH.get(seg);
+
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * union {
+     *     BYTE AsBYTE;
+     *     struct {
+     *         BYTE NoDomainAccounting : 1;
+     *         BYTE IncreasePolicy : 2;
+     *         BYTE DecreasePolicy : 2;
+     *         BYTE Reserved : 3;
+     *     };
+     * } Flags
+     * }
+     */
+    public static MemorySegment Flags(MemorySegment struct) {
+        return struct.asSlice(Flags$OFFSET, Flags$LAYOUT.byteSize());
     }
-    public static void TimeCheck$set( MemorySegment seg, int x) {
-        PROCESSOR_PERFSTATE_POLICY.TimeCheck$VH.set(seg, x);
+
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * union {
+     *     BYTE AsBYTE;
+     *     struct {
+     *         BYTE NoDomainAccounting : 1;
+     *         BYTE IncreasePolicy : 2;
+     *         BYTE DecreasePolicy : 2;
+     *         BYTE Reserved : 3;
+     *     };
+     * } Flags
+     * }
+     */
+    public static void Flags(MemorySegment struct, MemorySegment fieldValue) {
+        MemorySegment.copy(fieldValue, 0L, struct, Flags$OFFSET, Flags$LAYOUT.byteSize());
     }
-    public static int TimeCheck$get(MemorySegment seg, long index) {
-        return (int)PROCESSOR_PERFSTATE_POLICY.TimeCheck$VH.get(seg.asSlice(index*sizeof()));
+
+    private static final OfInt TimeCheck$LAYOUT = (OfInt)$LAYOUT.select(groupElement("TimeCheck"));
+
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * DWORD TimeCheck
+     * }
+     */
+    public static final OfInt TimeCheck$layout() {
+        return TimeCheck$LAYOUT;
     }
-    public static void TimeCheck$set(MemorySegment seg, long index, int x) {
-        PROCESSOR_PERFSTATE_POLICY.TimeCheck$VH.set(seg.asSlice(index*sizeof()), x);
+
+    private static final long TimeCheck$OFFSET = 8;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * DWORD TimeCheck
+     * }
+     */
+    public static final long TimeCheck$offset() {
+        return TimeCheck$OFFSET;
     }
-    static final VarHandle IncreaseTime$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("IncreaseTime"));
-    public static VarHandle IncreaseTime$VH() {
-        return PROCESSOR_PERFSTATE_POLICY.IncreaseTime$VH;
+
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * DWORD TimeCheck
+     * }
+     */
+    public static int TimeCheck(MemorySegment struct) {
+        return struct.get(TimeCheck$LAYOUT, TimeCheck$OFFSET);
     }
-    public static int IncreaseTime$get(MemorySegment seg) {
-        return (int)PROCESSOR_PERFSTATE_POLICY.IncreaseTime$VH.get(seg);
+
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * DWORD TimeCheck
+     * }
+     */
+    public static void TimeCheck(MemorySegment struct, int fieldValue) {
+        struct.set(TimeCheck$LAYOUT, TimeCheck$OFFSET, fieldValue);
     }
-    public static void IncreaseTime$set( MemorySegment seg, int x) {
-        PROCESSOR_PERFSTATE_POLICY.IncreaseTime$VH.set(seg, x);
+
+    private static final OfInt IncreaseTime$LAYOUT = (OfInt)$LAYOUT.select(groupElement("IncreaseTime"));
+
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * DWORD IncreaseTime
+     * }
+     */
+    public static final OfInt IncreaseTime$layout() {
+        return IncreaseTime$LAYOUT;
     }
-    public static int IncreaseTime$get(MemorySegment seg, long index) {
-        return (int)PROCESSOR_PERFSTATE_POLICY.IncreaseTime$VH.get(seg.asSlice(index*sizeof()));
+
+    private static final long IncreaseTime$OFFSET = 12;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * DWORD IncreaseTime
+     * }
+     */
+    public static final long IncreaseTime$offset() {
+        return IncreaseTime$OFFSET;
     }
-    public static void IncreaseTime$set(MemorySegment seg, long index, int x) {
-        PROCESSOR_PERFSTATE_POLICY.IncreaseTime$VH.set(seg.asSlice(index*sizeof()), x);
+
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * DWORD IncreaseTime
+     * }
+     */
+    public static int IncreaseTime(MemorySegment struct) {
+        return struct.get(IncreaseTime$LAYOUT, IncreaseTime$OFFSET);
     }
-    static final VarHandle DecreaseTime$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("DecreaseTime"));
-    public static VarHandle DecreaseTime$VH() {
-        return PROCESSOR_PERFSTATE_POLICY.DecreaseTime$VH;
+
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * DWORD IncreaseTime
+     * }
+     */
+    public static void IncreaseTime(MemorySegment struct, int fieldValue) {
+        struct.set(IncreaseTime$LAYOUT, IncreaseTime$OFFSET, fieldValue);
     }
-    public static int DecreaseTime$get(MemorySegment seg) {
-        return (int)PROCESSOR_PERFSTATE_POLICY.DecreaseTime$VH.get(seg);
+
+    private static final OfInt DecreaseTime$LAYOUT = (OfInt)$LAYOUT.select(groupElement("DecreaseTime"));
+
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * DWORD DecreaseTime
+     * }
+     */
+    public static final OfInt DecreaseTime$layout() {
+        return DecreaseTime$LAYOUT;
     }
-    public static void DecreaseTime$set( MemorySegment seg, int x) {
-        PROCESSOR_PERFSTATE_POLICY.DecreaseTime$VH.set(seg, x);
+
+    private static final long DecreaseTime$OFFSET = 16;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * DWORD DecreaseTime
+     * }
+     */
+    public static final long DecreaseTime$offset() {
+        return DecreaseTime$OFFSET;
     }
-    public static int DecreaseTime$get(MemorySegment seg, long index) {
-        return (int)PROCESSOR_PERFSTATE_POLICY.DecreaseTime$VH.get(seg.asSlice(index*sizeof()));
+
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * DWORD DecreaseTime
+     * }
+     */
+    public static int DecreaseTime(MemorySegment struct) {
+        return struct.get(DecreaseTime$LAYOUT, DecreaseTime$OFFSET);
     }
-    public static void DecreaseTime$set(MemorySegment seg, long index, int x) {
-        PROCESSOR_PERFSTATE_POLICY.DecreaseTime$VH.set(seg.asSlice(index*sizeof()), x);
+
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * DWORD DecreaseTime
+     * }
+     */
+    public static void DecreaseTime(MemorySegment struct, int fieldValue) {
+        struct.set(DecreaseTime$LAYOUT, DecreaseTime$OFFSET, fieldValue);
     }
-    static final VarHandle IncreasePercent$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("IncreasePercent"));
-    public static VarHandle IncreasePercent$VH() {
-        return PROCESSOR_PERFSTATE_POLICY.IncreasePercent$VH;
+
+    private static final OfInt IncreasePercent$LAYOUT = (OfInt)$LAYOUT.select(groupElement("IncreasePercent"));
+
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * DWORD IncreasePercent
+     * }
+     */
+    public static final OfInt IncreasePercent$layout() {
+        return IncreasePercent$LAYOUT;
     }
-    public static int IncreasePercent$get(MemorySegment seg) {
-        return (int)PROCESSOR_PERFSTATE_POLICY.IncreasePercent$VH.get(seg);
+
+    private static final long IncreasePercent$OFFSET = 20;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * DWORD IncreasePercent
+     * }
+     */
+    public static final long IncreasePercent$offset() {
+        return IncreasePercent$OFFSET;
     }
-    public static void IncreasePercent$set( MemorySegment seg, int x) {
-        PROCESSOR_PERFSTATE_POLICY.IncreasePercent$VH.set(seg, x);
+
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * DWORD IncreasePercent
+     * }
+     */
+    public static int IncreasePercent(MemorySegment struct) {
+        return struct.get(IncreasePercent$LAYOUT, IncreasePercent$OFFSET);
     }
-    public static int IncreasePercent$get(MemorySegment seg, long index) {
-        return (int)PROCESSOR_PERFSTATE_POLICY.IncreasePercent$VH.get(seg.asSlice(index*sizeof()));
+
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * DWORD IncreasePercent
+     * }
+     */
+    public static void IncreasePercent(MemorySegment struct, int fieldValue) {
+        struct.set(IncreasePercent$LAYOUT, IncreasePercent$OFFSET, fieldValue);
     }
-    public static void IncreasePercent$set(MemorySegment seg, long index, int x) {
-        PROCESSOR_PERFSTATE_POLICY.IncreasePercent$VH.set(seg.asSlice(index*sizeof()), x);
+
+    private static final OfInt DecreasePercent$LAYOUT = (OfInt)$LAYOUT.select(groupElement("DecreasePercent"));
+
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * DWORD DecreasePercent
+     * }
+     */
+    public static final OfInt DecreasePercent$layout() {
+        return DecreasePercent$LAYOUT;
     }
-    static final VarHandle DecreasePercent$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("DecreasePercent"));
-    public static VarHandle DecreasePercent$VH() {
-        return PROCESSOR_PERFSTATE_POLICY.DecreasePercent$VH;
+
+    private static final long DecreasePercent$OFFSET = 24;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * DWORD DecreasePercent
+     * }
+     */
+    public static final long DecreasePercent$offset() {
+        return DecreasePercent$OFFSET;
     }
-    public static int DecreasePercent$get(MemorySegment seg) {
-        return (int)PROCESSOR_PERFSTATE_POLICY.DecreasePercent$VH.get(seg);
+
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * DWORD DecreasePercent
+     * }
+     */
+    public static int DecreasePercent(MemorySegment struct) {
+        return struct.get(DecreasePercent$LAYOUT, DecreasePercent$OFFSET);
     }
-    public static void DecreasePercent$set( MemorySegment seg, int x) {
-        PROCESSOR_PERFSTATE_POLICY.DecreasePercent$VH.set(seg, x);
+
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * DWORD DecreasePercent
+     * }
+     */
+    public static void DecreasePercent(MemorySegment struct, int fieldValue) {
+        struct.set(DecreasePercent$LAYOUT, DecreasePercent$OFFSET, fieldValue);
     }
-    public static int DecreasePercent$get(MemorySegment seg, long index) {
-        return (int)PROCESSOR_PERFSTATE_POLICY.DecreasePercent$VH.get(seg.asSlice(index*sizeof()));
+
+    /**
+     * Obtains a slice of {@code arrayParam} which selects the array element at {@code index}.
+     * The returned segment has address {@code arrayParam.address() + index * layout().byteSize()}
+     */
+    public static MemorySegment asSlice(MemorySegment array, long index) {
+        return array.asSlice(layout().byteSize() * index);
     }
-    public static void DecreasePercent$set(MemorySegment seg, long index, int x) {
-        PROCESSOR_PERFSTATE_POLICY.DecreasePercent$VH.set(seg.asSlice(index*sizeof()), x);
+
+    /**
+     * The size (in bytes) of this struct
+     */
+    public static long sizeof() { return layout().byteSize(); }
+
+    /**
+     * Allocate a segment of size {@code layout().byteSize()} using {@code allocator}
+     */
+    public static MemorySegment allocate(SegmentAllocator allocator) {
+        return allocator.allocate(layout());
     }
-    public static long sizeof() { return $LAYOUT().byteSize(); }
-    public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
-    public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
-        return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
+
+    /**
+     * Allocate an array of size {@code elementCount} using {@code allocator}.
+     * The returned segment has size {@code elementCount * layout().byteSize()}.
+     */
+    public static MemorySegment allocateArray(long elementCount, SegmentAllocator allocator) {
+        return allocator.allocate(MemoryLayout.sequenceLayout(elementCount, layout()));
     }
-    public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
+
+    /**
+     * Reinterprets {@code addr} using target {@code arena} and {@code cleanupAction} (if any).
+     * The returned segment has size {@code layout().byteSize()}
+     */
+    public static MemorySegment reinterpret(MemorySegment addr, Arena arena, Consumer<MemorySegment> cleanup) {
+        return reinterpret(addr, 1, arena, cleanup);
+    }
+
+    /**
+     * Reinterprets {@code addr} using target {@code arena} and {@code cleanupAction} (if any).
+     * The returned segment has size {@code elementCount * layout().byteSize()}
+     */
+    public static MemorySegment reinterpret(MemorySegment addr, long elementCount, Arena arena, Consumer<MemorySegment> cleanup) {
+        return addr.reinterpret(layout().byteSize() * elementCount, arena, cleanup);
+    }
 }
-
 
