@@ -2,199 +2,836 @@
 
 package wgl.windows.x86;
 
-import java.lang.invoke.MethodHandle;
-import java.lang.invoke.VarHandle;
-import java.nio.ByteOrder;
+import java.lang.invoke.*;
 import java.lang.foreign.*;
+import java.nio.ByteOrder;
+import java.util.*;
+import java.util.function.*;
+import java.util.stream.*;
+
 import static java.lang.foreign.ValueLayout.*;
+import static java.lang.foreign.MemoryLayout.PathElement.*;
+
+/**
+ * {@snippet lang=c :
+ * struct _IMAGE_SYMBOL_EX {
+ *     union {
+ *         BYTE ShortName[8];
+ *         struct {
+ *             DWORD Short;
+ *             DWORD Long;
+ *         } Name;
+ *         DWORD LongName[2];
+ *     } N;
+ *     DWORD Value;
+ *     LONG SectionNumber;
+ *     WORD Type;
+ *     BYTE StorageClass;
+ *     BYTE NumberOfAuxSymbols;
+ * }
+ * }
+ */
 public class _IMAGE_SYMBOL_EX {
 
-    static final  GroupLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        MemoryLayout.unionLayout(
-            MemoryLayout.sequenceLayout(8, Constants$root.C_CHAR$LAYOUT).withName("ShortName"),
-            MemoryLayout.structLayout(
-                Constants$root.C_LONG$LAYOUT.withName("Short"),
-                Constants$root.C_LONG$LAYOUT.withName("Long")
-            ).withName("Name"),
-            MemoryLayout.sequenceLayout(2, Constants$root.C_LONG$LAYOUT).withName("LongName")
-        ).withName("N"),
-        Constants$root.C_LONG$LAYOUT.withName("Value"),
-        Constants$root.C_LONG$LAYOUT.withName("SectionNumber"),
-        Constants$root.C_SHORT$LAYOUT.withName("Type"),
-        Constants$root.C_CHAR$LAYOUT.withName("StorageClass"),
-        Constants$root.C_CHAR$LAYOUT.withName("NumberOfAuxSymbols")
-    ).withName("_IMAGE_SYMBOL_EX");
-    public static MemoryLayout $LAYOUT() {
-        return _IMAGE_SYMBOL_EX.$struct$LAYOUT;
+    _IMAGE_SYMBOL_EX() {
+        // Should not be called directly
     }
+
+    private static final GroupLayout $LAYOUT = MemoryLayout.structLayout(
+        _IMAGE_SYMBOL_EX.N.layout().withName("N"),
+        wgl_h.align(wgl_h.C_LONG, 2).withName("Value"),
+        wgl_h.align(wgl_h.C_LONG, 2).withName("SectionNumber"),
+        wgl_h.C_SHORT.withName("Type"),
+        wgl_h.C_CHAR.withName("StorageClass"),
+        wgl_h.C_CHAR.withName("NumberOfAuxSymbols")
+    ).withName("_IMAGE_SYMBOL_EX");
+
+    /**
+     * The layout of this struct
+     */
+    public static final GroupLayout layout() {
+        return $LAYOUT;
+    }
+
+    /**
+     * {@snippet lang=c :
+     * union {
+     *     BYTE ShortName[8];
+     *     struct {
+     *         DWORD Short;
+     *         DWORD Long;
+     *     } Name;
+     *     DWORD LongName[2];
+     * }
+     * }
+     */
     public static class N {
 
-        static final  GroupLayout N$union$LAYOUT = MemoryLayout.unionLayout(
-            MemoryLayout.sequenceLayout(8, Constants$root.C_CHAR$LAYOUT).withName("ShortName"),
-            MemoryLayout.structLayout(
-                Constants$root.C_LONG$LAYOUT.withName("Short"),
-                Constants$root.C_LONG$LAYOUT.withName("Long")
-            ).withName("Name"),
-            MemoryLayout.sequenceLayout(2, Constants$root.C_LONG$LAYOUT).withName("LongName")
-        );
-        public static MemoryLayout $LAYOUT() {
-            return N.N$union$LAYOUT;
+        N() {
+            // Should not be called directly
         }
-        public static MemorySegment ShortName$slice(MemorySegment seg) {
-            return seg.asSlice(0, 8);
+
+        private static final GroupLayout $LAYOUT = MemoryLayout.unionLayout(
+            MemoryLayout.sequenceLayout(8, wgl_h.C_CHAR).withName("ShortName"),
+            _IMAGE_SYMBOL_EX.N.Name.layout().withName("Name"),
+            MemoryLayout.sequenceLayout(2, wgl_h.align(wgl_h.C_LONG, 2)).withName("LongName")
+        ).withName("$anon$17420:5");
+
+        /**
+         * The layout of this union
+         */
+        public static final GroupLayout layout() {
+            return $LAYOUT;
         }
+
+        private static final SequenceLayout ShortName$LAYOUT = (SequenceLayout)$LAYOUT.select(groupElement("ShortName"));
+
+        /**
+         * Layout for field:
+         * {@snippet lang=c :
+         * BYTE ShortName[8]
+         * }
+         */
+        public static final SequenceLayout ShortName$layout() {
+            return ShortName$LAYOUT;
+        }
+
+        private static final long ShortName$OFFSET = 0;
+
+        /**
+         * Offset for field:
+         * {@snippet lang=c :
+         * BYTE ShortName[8]
+         * }
+         */
+        public static final long ShortName$offset() {
+            return ShortName$OFFSET;
+        }
+
+        /**
+         * Getter for field:
+         * {@snippet lang=c :
+         * BYTE ShortName[8]
+         * }
+         */
+        public static MemorySegment ShortName(MemorySegment union) {
+            return union.asSlice(ShortName$OFFSET, ShortName$LAYOUT.byteSize());
+        }
+
+        /**
+         * Setter for field:
+         * {@snippet lang=c :
+         * BYTE ShortName[8]
+         * }
+         */
+        public static void ShortName(MemorySegment union, MemorySegment fieldValue) {
+            MemorySegment.copy(fieldValue, 0L, union, ShortName$OFFSET, ShortName$LAYOUT.byteSize());
+        }
+
+        private static long[] ShortName$DIMS = { 8 };
+
+        /**
+         * Dimensions for array field:
+         * {@snippet lang=c :
+         * BYTE ShortName[8]
+         * }
+         */
+        public static long[] ShortName$dimensions() {
+            return ShortName$DIMS;
+        }
+        private static final VarHandle ShortName$ELEM_HANDLE = ShortName$LAYOUT.varHandle(sequenceElement());
+
+        /**
+         * Indexed getter for field:
+         * {@snippet lang=c :
+         * BYTE ShortName[8]
+         * }
+         */
+        public static byte ShortName(MemorySegment union, long index0) {
+            return (byte)ShortName$ELEM_HANDLE.get(union, 0L, index0);
+        }
+
+        /**
+         * Indexed setter for field:
+         * {@snippet lang=c :
+         * BYTE ShortName[8]
+         * }
+         */
+        public static void ShortName(MemorySegment union, long index0, byte fieldValue) {
+            ShortName$ELEM_HANDLE.set(union, 0L, index0, fieldValue);
+        }
+
+        /**
+         * {@snippet lang=c :
+         * struct {
+         *     DWORD Short;
+         *     DWORD Long;
+         * }
+         * }
+         */
         public static class Name {
 
-            static final  GroupLayout N$Name$struct$LAYOUT = MemoryLayout.structLayout(
-                Constants$root.C_LONG$LAYOUT.withName("Short"),
-                Constants$root.C_LONG$LAYOUT.withName("Long")
-            );
-            public static MemoryLayout $LAYOUT() {
-                return Name.N$Name$struct$LAYOUT;
+            Name() {
+                // Should not be called directly
             }
-            static final VarHandle Short$VH = N$Name$struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("Short"));
-            public static VarHandle Short$VH() {
-                return Name.Short$VH;
+
+            private static final GroupLayout $LAYOUT = MemoryLayout.structLayout(
+                wgl_h.align(wgl_h.C_LONG, 2).withName("Short"),
+                wgl_h.align(wgl_h.C_LONG, 2).withName("Long")
+            ).withName("$anon$17422:9");
+
+            /**
+             * The layout of this struct
+             */
+            public static final GroupLayout layout() {
+                return $LAYOUT;
             }
-            public static int Short$get(MemorySegment seg) {
-                return (int)Name.Short$VH.get(seg);
+
+            private static final OfInt Short$LAYOUT = (OfInt)$LAYOUT.select(groupElement("Short"));
+
+            /**
+             * Layout for field:
+             * {@snippet lang=c :
+             * DWORD Short
+             * }
+             */
+            public static final OfInt Short$layout() {
+                return Short$LAYOUT;
             }
-            public static void Short$set( MemorySegment seg, int x) {
-                Name.Short$VH.set(seg, x);
+
+            private static final long Short$OFFSET = 0;
+
+            /**
+             * Offset for field:
+             * {@snippet lang=c :
+             * DWORD Short
+             * }
+             */
+            public static final long Short$offset() {
+                return Short$OFFSET;
             }
-            public static int Short$get(MemorySegment seg, long index) {
-                return (int)Name.Short$VH.get(seg.asSlice(index*sizeof()));
+
+            /**
+             * Getter for field:
+             * {@snippet lang=c :
+             * DWORD Short
+             * }
+             */
+            public static int Short(MemorySegment struct) {
+                return struct.get(Short$LAYOUT, Short$OFFSET);
             }
-            public static void Short$set(MemorySegment seg, long index, int x) {
-                Name.Short$VH.set(seg.asSlice(index*sizeof()), x);
+
+            /**
+             * Setter for field:
+             * {@snippet lang=c :
+             * DWORD Short
+             * }
+             */
+            public static void Short(MemorySegment struct, int fieldValue) {
+                struct.set(Short$LAYOUT, Short$OFFSET, fieldValue);
             }
-            static final VarHandle Long$VH = N$Name$struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("Long"));
-            public static VarHandle Long$VH() {
-                return Name.Long$VH;
+
+            private static final OfInt Long$LAYOUT = (OfInt)$LAYOUT.select(groupElement("Long"));
+
+            /**
+             * Layout for field:
+             * {@snippet lang=c :
+             * DWORD Long
+             * }
+             */
+            public static final OfInt Long$layout() {
+                return Long$LAYOUT;
             }
-            public static int Long$get(MemorySegment seg) {
-                return (int)Name.Long$VH.get(seg);
+
+            private static final long Long$OFFSET = 4;
+
+            /**
+             * Offset for field:
+             * {@snippet lang=c :
+             * DWORD Long
+             * }
+             */
+            public static final long Long$offset() {
+                return Long$OFFSET;
             }
-            public static void Long$set( MemorySegment seg, int x) {
-                Name.Long$VH.set(seg, x);
+
+            /**
+             * Getter for field:
+             * {@snippet lang=c :
+             * DWORD Long
+             * }
+             */
+            public static int Long(MemorySegment struct) {
+                return struct.get(Long$LAYOUT, Long$OFFSET);
             }
-            public static int Long$get(MemorySegment seg, long index) {
-                return (int)Name.Long$VH.get(seg.asSlice(index*sizeof()));
+
+            /**
+             * Setter for field:
+             * {@snippet lang=c :
+             * DWORD Long
+             * }
+             */
+            public static void Long(MemorySegment struct, int fieldValue) {
+                struct.set(Long$LAYOUT, Long$OFFSET, fieldValue);
             }
-            public static void Long$set(MemorySegment seg, long index, int x) {
-                Name.Long$VH.set(seg.asSlice(index*sizeof()), x);
+
+            /**
+             * Obtains a slice of {@code arrayParam} which selects the array element at {@code index}.
+             * The returned segment has address {@code arrayParam.address() + index * layout().byteSize()}
+             */
+            public static MemorySegment asSlice(MemorySegment array, long index) {
+                return array.asSlice(layout().byteSize() * index);
             }
-            public static long sizeof() { return $LAYOUT().byteSize(); }
-            public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
-            public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
-                return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
+
+            /**
+             * The size (in bytes) of this struct
+             */
+            public static long sizeof() { return layout().byteSize(); }
+
+            /**
+             * Allocate a segment of size {@code layout().byteSize()} using {@code allocator}
+             */
+            public static MemorySegment allocate(SegmentAllocator allocator) {
+                return allocator.allocate(layout());
             }
-            public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
+
+            /**
+             * Allocate an array of size {@code elementCount} using {@code allocator}.
+             * The returned segment has size {@code elementCount * layout().byteSize()}.
+             */
+            public static MemorySegment allocateArray(long elementCount, SegmentAllocator allocator) {
+                return allocator.allocate(MemoryLayout.sequenceLayout(elementCount, layout()));
+            }
+
+            /**
+             * Reinterprets {@code addr} using target {@code arena} and {@code cleanupAction} (if any).
+             * The returned segment has size {@code layout().byteSize()}
+             */
+            public static MemorySegment reinterpret(MemorySegment addr, Arena arena, Consumer<MemorySegment> cleanup) {
+                return reinterpret(addr, 1, arena, cleanup);
+            }
+
+            /**
+             * Reinterprets {@code addr} using target {@code arena} and {@code cleanupAction} (if any).
+             * The returned segment has size {@code elementCount * layout().byteSize()}
+             */
+            public static MemorySegment reinterpret(MemorySegment addr, long elementCount, Arena arena, Consumer<MemorySegment> cleanup) {
+                return addr.reinterpret(layout().byteSize() * elementCount, arena, cleanup);
+            }
         }
 
-        public static MemorySegment Name$slice(MemorySegment seg) {
-            return seg.asSlice(0, 8);
+        private static final GroupLayout Name$LAYOUT = (GroupLayout)$LAYOUT.select(groupElement("Name"));
+
+        /**
+         * Layout for field:
+         * {@snippet lang=c :
+         * struct {
+         *     DWORD Short;
+         *     DWORD Long;
+         * } Name
+         * }
+         */
+        public static final GroupLayout Name$layout() {
+            return Name$LAYOUT;
         }
-        public static MemorySegment LongName$slice(MemorySegment seg) {
-            return seg.asSlice(0, 8);
+
+        private static final long Name$OFFSET = 0;
+
+        /**
+         * Offset for field:
+         * {@snippet lang=c :
+         * struct {
+         *     DWORD Short;
+         *     DWORD Long;
+         * } Name
+         * }
+         */
+        public static final long Name$offset() {
+            return Name$OFFSET;
         }
-        public static long sizeof() { return $LAYOUT().byteSize(); }
-        public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
-        public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
-            return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
+
+        /**
+         * Getter for field:
+         * {@snippet lang=c :
+         * struct {
+         *     DWORD Short;
+         *     DWORD Long;
+         * } Name
+         * }
+         */
+        public static MemorySegment Name(MemorySegment union) {
+            return union.asSlice(Name$OFFSET, Name$LAYOUT.byteSize());
         }
-        public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
+
+        /**
+         * Setter for field:
+         * {@snippet lang=c :
+         * struct {
+         *     DWORD Short;
+         *     DWORD Long;
+         * } Name
+         * }
+         */
+        public static void Name(MemorySegment union, MemorySegment fieldValue) {
+            MemorySegment.copy(fieldValue, 0L, union, Name$OFFSET, Name$LAYOUT.byteSize());
+        }
+
+        private static final SequenceLayout LongName$LAYOUT = (SequenceLayout)$LAYOUT.select(groupElement("LongName"));
+
+        /**
+         * Layout for field:
+         * {@snippet lang=c :
+         * DWORD LongName[2]
+         * }
+         */
+        public static final SequenceLayout LongName$layout() {
+            return LongName$LAYOUT;
+        }
+
+        private static final long LongName$OFFSET = 0;
+
+        /**
+         * Offset for field:
+         * {@snippet lang=c :
+         * DWORD LongName[2]
+         * }
+         */
+        public static final long LongName$offset() {
+            return LongName$OFFSET;
+        }
+
+        /**
+         * Getter for field:
+         * {@snippet lang=c :
+         * DWORD LongName[2]
+         * }
+         */
+        public static MemorySegment LongName(MemorySegment union) {
+            return union.asSlice(LongName$OFFSET, LongName$LAYOUT.byteSize());
+        }
+
+        /**
+         * Setter for field:
+         * {@snippet lang=c :
+         * DWORD LongName[2]
+         * }
+         */
+        public static void LongName(MemorySegment union, MemorySegment fieldValue) {
+            MemorySegment.copy(fieldValue, 0L, union, LongName$OFFSET, LongName$LAYOUT.byteSize());
+        }
+
+        private static long[] LongName$DIMS = { 2 };
+
+        /**
+         * Dimensions for array field:
+         * {@snippet lang=c :
+         * DWORD LongName[2]
+         * }
+         */
+        public static long[] LongName$dimensions() {
+            return LongName$DIMS;
+        }
+        private static final VarHandle LongName$ELEM_HANDLE = LongName$LAYOUT.varHandle(sequenceElement());
+
+        /**
+         * Indexed getter for field:
+         * {@snippet lang=c :
+         * DWORD LongName[2]
+         * }
+         */
+        public static int LongName(MemorySegment union, long index0) {
+            return (int)LongName$ELEM_HANDLE.get(union, 0L, index0);
+        }
+
+        /**
+         * Indexed setter for field:
+         * {@snippet lang=c :
+         * DWORD LongName[2]
+         * }
+         */
+        public static void LongName(MemorySegment union, long index0, int fieldValue) {
+            LongName$ELEM_HANDLE.set(union, 0L, index0, fieldValue);
+        }
+
+        /**
+         * Obtains a slice of {@code arrayParam} which selects the array element at {@code index}.
+         * The returned segment has address {@code arrayParam.address() + index * layout().byteSize()}
+         */
+        public static MemorySegment asSlice(MemorySegment array, long index) {
+            return array.asSlice(layout().byteSize() * index);
+        }
+
+        /**
+         * The size (in bytes) of this union
+         */
+        public static long sizeof() { return layout().byteSize(); }
+
+        /**
+         * Allocate a segment of size {@code layout().byteSize()} using {@code allocator}
+         */
+        public static MemorySegment allocate(SegmentAllocator allocator) {
+            return allocator.allocate(layout());
+        }
+
+        /**
+         * Allocate an array of size {@code elementCount} using {@code allocator}.
+         * The returned segment has size {@code elementCount * layout().byteSize()}.
+         */
+        public static MemorySegment allocateArray(long elementCount, SegmentAllocator allocator) {
+            return allocator.allocate(MemoryLayout.sequenceLayout(elementCount, layout()));
+        }
+
+        /**
+         * Reinterprets {@code addr} using target {@code arena} and {@code cleanupAction} (if any).
+         * The returned segment has size {@code layout().byteSize()}
+         */
+        public static MemorySegment reinterpret(MemorySegment addr, Arena arena, Consumer<MemorySegment> cleanup) {
+            return reinterpret(addr, 1, arena, cleanup);
+        }
+
+        /**
+         * Reinterprets {@code addr} using target {@code arena} and {@code cleanupAction} (if any).
+         * The returned segment has size {@code elementCount * layout().byteSize()}
+         */
+        public static MemorySegment reinterpret(MemorySegment addr, long elementCount, Arena arena, Consumer<MemorySegment> cleanup) {
+            return addr.reinterpret(layout().byteSize() * elementCount, arena, cleanup);
+        }
     }
 
-    public static MemorySegment N$slice(MemorySegment seg) {
-        return seg.asSlice(0, 8);
+    private static final GroupLayout N$LAYOUT = (GroupLayout)$LAYOUT.select(groupElement("N"));
+
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * union {
+     *     BYTE ShortName[8];
+     *     struct {
+     *         DWORD Short;
+     *         DWORD Long;
+     *     } Name;
+     *     DWORD LongName[2];
+     * } N
+     * }
+     */
+    public static final GroupLayout N$layout() {
+        return N$LAYOUT;
     }
-    static final VarHandle Value$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("Value"));
-    public static VarHandle Value$VH() {
-        return _IMAGE_SYMBOL_EX.Value$VH;
+
+    private static final long N$OFFSET = 0;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * union {
+     *     BYTE ShortName[8];
+     *     struct {
+     *         DWORD Short;
+     *         DWORD Long;
+     *     } Name;
+     *     DWORD LongName[2];
+     * } N
+     * }
+     */
+    public static final long N$offset() {
+        return N$OFFSET;
     }
-    public static int Value$get(MemorySegment seg) {
-        return (int)_IMAGE_SYMBOL_EX.Value$VH.get(seg);
+
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * union {
+     *     BYTE ShortName[8];
+     *     struct {
+     *         DWORD Short;
+     *         DWORD Long;
+     *     } Name;
+     *     DWORD LongName[2];
+     * } N
+     * }
+     */
+    public static MemorySegment N(MemorySegment struct) {
+        return struct.asSlice(N$OFFSET, N$LAYOUT.byteSize());
     }
-    public static void Value$set( MemorySegment seg, int x) {
-        _IMAGE_SYMBOL_EX.Value$VH.set(seg, x);
+
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * union {
+     *     BYTE ShortName[8];
+     *     struct {
+     *         DWORD Short;
+     *         DWORD Long;
+     *     } Name;
+     *     DWORD LongName[2];
+     * } N
+     * }
+     */
+    public static void N(MemorySegment struct, MemorySegment fieldValue) {
+        MemorySegment.copy(fieldValue, 0L, struct, N$OFFSET, N$LAYOUT.byteSize());
     }
-    public static int Value$get(MemorySegment seg, long index) {
-        return (int)_IMAGE_SYMBOL_EX.Value$VH.get(seg.asSlice(index*sizeof()));
+
+    private static final OfInt Value$LAYOUT = (OfInt)$LAYOUT.select(groupElement("Value"));
+
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * DWORD Value
+     * }
+     */
+    public static final OfInt Value$layout() {
+        return Value$LAYOUT;
     }
-    public static void Value$set(MemorySegment seg, long index, int x) {
-        _IMAGE_SYMBOL_EX.Value$VH.set(seg.asSlice(index*sizeof()), x);
+
+    private static final long Value$OFFSET = 8;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * DWORD Value
+     * }
+     */
+    public static final long Value$offset() {
+        return Value$OFFSET;
     }
-    static final VarHandle SectionNumber$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("SectionNumber"));
-    public static VarHandle SectionNumber$VH() {
-        return _IMAGE_SYMBOL_EX.SectionNumber$VH;
+
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * DWORD Value
+     * }
+     */
+    public static int Value(MemorySegment struct) {
+        return struct.get(Value$LAYOUT, Value$OFFSET);
     }
-    public static int SectionNumber$get(MemorySegment seg) {
-        return (int)_IMAGE_SYMBOL_EX.SectionNumber$VH.get(seg);
+
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * DWORD Value
+     * }
+     */
+    public static void Value(MemorySegment struct, int fieldValue) {
+        struct.set(Value$LAYOUT, Value$OFFSET, fieldValue);
     }
-    public static void SectionNumber$set( MemorySegment seg, int x) {
-        _IMAGE_SYMBOL_EX.SectionNumber$VH.set(seg, x);
+
+    private static final OfInt SectionNumber$LAYOUT = (OfInt)$LAYOUT.select(groupElement("SectionNumber"));
+
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * LONG SectionNumber
+     * }
+     */
+    public static final OfInt SectionNumber$layout() {
+        return SectionNumber$LAYOUT;
     }
-    public static int SectionNumber$get(MemorySegment seg, long index) {
-        return (int)_IMAGE_SYMBOL_EX.SectionNumber$VH.get(seg.asSlice(index*sizeof()));
+
+    private static final long SectionNumber$OFFSET = 12;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * LONG SectionNumber
+     * }
+     */
+    public static final long SectionNumber$offset() {
+        return SectionNumber$OFFSET;
     }
-    public static void SectionNumber$set(MemorySegment seg, long index, int x) {
-        _IMAGE_SYMBOL_EX.SectionNumber$VH.set(seg.asSlice(index*sizeof()), x);
+
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * LONG SectionNumber
+     * }
+     */
+    public static int SectionNumber(MemorySegment struct) {
+        return struct.get(SectionNumber$LAYOUT, SectionNumber$OFFSET);
     }
-    static final VarHandle Type$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("Type"));
-    public static VarHandle Type$VH() {
-        return _IMAGE_SYMBOL_EX.Type$VH;
+
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * LONG SectionNumber
+     * }
+     */
+    public static void SectionNumber(MemorySegment struct, int fieldValue) {
+        struct.set(SectionNumber$LAYOUT, SectionNumber$OFFSET, fieldValue);
     }
-    public static short Type$get(MemorySegment seg) {
-        return (short)_IMAGE_SYMBOL_EX.Type$VH.get(seg);
+
+    private static final OfShort Type$LAYOUT = (OfShort)$LAYOUT.select(groupElement("Type"));
+
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * WORD Type
+     * }
+     */
+    public static final OfShort Type$layout() {
+        return Type$LAYOUT;
     }
-    public static void Type$set( MemorySegment seg, short x) {
-        _IMAGE_SYMBOL_EX.Type$VH.set(seg, x);
+
+    private static final long Type$OFFSET = 16;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * WORD Type
+     * }
+     */
+    public static final long Type$offset() {
+        return Type$OFFSET;
     }
-    public static short Type$get(MemorySegment seg, long index) {
-        return (short)_IMAGE_SYMBOL_EX.Type$VH.get(seg.asSlice(index*sizeof()));
+
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * WORD Type
+     * }
+     */
+    public static short Type(MemorySegment struct) {
+        return struct.get(Type$LAYOUT, Type$OFFSET);
     }
-    public static void Type$set(MemorySegment seg, long index, short x) {
-        _IMAGE_SYMBOL_EX.Type$VH.set(seg.asSlice(index*sizeof()), x);
+
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * WORD Type
+     * }
+     */
+    public static void Type(MemorySegment struct, short fieldValue) {
+        struct.set(Type$LAYOUT, Type$OFFSET, fieldValue);
     }
-    static final VarHandle StorageClass$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("StorageClass"));
-    public static VarHandle StorageClass$VH() {
-        return _IMAGE_SYMBOL_EX.StorageClass$VH;
+
+    private static final OfByte StorageClass$LAYOUT = (OfByte)$LAYOUT.select(groupElement("StorageClass"));
+
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * BYTE StorageClass
+     * }
+     */
+    public static final OfByte StorageClass$layout() {
+        return StorageClass$LAYOUT;
     }
-    public static byte StorageClass$get(MemorySegment seg) {
-        return (byte)_IMAGE_SYMBOL_EX.StorageClass$VH.get(seg);
+
+    private static final long StorageClass$OFFSET = 18;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * BYTE StorageClass
+     * }
+     */
+    public static final long StorageClass$offset() {
+        return StorageClass$OFFSET;
     }
-    public static void StorageClass$set( MemorySegment seg, byte x) {
-        _IMAGE_SYMBOL_EX.StorageClass$VH.set(seg, x);
+
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * BYTE StorageClass
+     * }
+     */
+    public static byte StorageClass(MemorySegment struct) {
+        return struct.get(StorageClass$LAYOUT, StorageClass$OFFSET);
     }
-    public static byte StorageClass$get(MemorySegment seg, long index) {
-        return (byte)_IMAGE_SYMBOL_EX.StorageClass$VH.get(seg.asSlice(index*sizeof()));
+
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * BYTE StorageClass
+     * }
+     */
+    public static void StorageClass(MemorySegment struct, byte fieldValue) {
+        struct.set(StorageClass$LAYOUT, StorageClass$OFFSET, fieldValue);
     }
-    public static void StorageClass$set(MemorySegment seg, long index, byte x) {
-        _IMAGE_SYMBOL_EX.StorageClass$VH.set(seg.asSlice(index*sizeof()), x);
+
+    private static final OfByte NumberOfAuxSymbols$LAYOUT = (OfByte)$LAYOUT.select(groupElement("NumberOfAuxSymbols"));
+
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * BYTE NumberOfAuxSymbols
+     * }
+     */
+    public static final OfByte NumberOfAuxSymbols$layout() {
+        return NumberOfAuxSymbols$LAYOUT;
     }
-    static final VarHandle NumberOfAuxSymbols$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("NumberOfAuxSymbols"));
-    public static VarHandle NumberOfAuxSymbols$VH() {
-        return _IMAGE_SYMBOL_EX.NumberOfAuxSymbols$VH;
+
+    private static final long NumberOfAuxSymbols$OFFSET = 19;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * BYTE NumberOfAuxSymbols
+     * }
+     */
+    public static final long NumberOfAuxSymbols$offset() {
+        return NumberOfAuxSymbols$OFFSET;
     }
-    public static byte NumberOfAuxSymbols$get(MemorySegment seg) {
-        return (byte)_IMAGE_SYMBOL_EX.NumberOfAuxSymbols$VH.get(seg);
+
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * BYTE NumberOfAuxSymbols
+     * }
+     */
+    public static byte NumberOfAuxSymbols(MemorySegment struct) {
+        return struct.get(NumberOfAuxSymbols$LAYOUT, NumberOfAuxSymbols$OFFSET);
     }
-    public static void NumberOfAuxSymbols$set( MemorySegment seg, byte x) {
-        _IMAGE_SYMBOL_EX.NumberOfAuxSymbols$VH.set(seg, x);
+
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * BYTE NumberOfAuxSymbols
+     * }
+     */
+    public static void NumberOfAuxSymbols(MemorySegment struct, byte fieldValue) {
+        struct.set(NumberOfAuxSymbols$LAYOUT, NumberOfAuxSymbols$OFFSET, fieldValue);
     }
-    public static byte NumberOfAuxSymbols$get(MemorySegment seg, long index) {
-        return (byte)_IMAGE_SYMBOL_EX.NumberOfAuxSymbols$VH.get(seg.asSlice(index*sizeof()));
+
+    /**
+     * Obtains a slice of {@code arrayParam} which selects the array element at {@code index}.
+     * The returned segment has address {@code arrayParam.address() + index * layout().byteSize()}
+     */
+    public static MemorySegment asSlice(MemorySegment array, long index) {
+        return array.asSlice(layout().byteSize() * index);
     }
-    public static void NumberOfAuxSymbols$set(MemorySegment seg, long index, byte x) {
-        _IMAGE_SYMBOL_EX.NumberOfAuxSymbols$VH.set(seg.asSlice(index*sizeof()), x);
+
+    /**
+     * The size (in bytes) of this struct
+     */
+    public static long sizeof() { return layout().byteSize(); }
+
+    /**
+     * Allocate a segment of size {@code layout().byteSize()} using {@code allocator}
+     */
+    public static MemorySegment allocate(SegmentAllocator allocator) {
+        return allocator.allocate(layout());
     }
-    public static long sizeof() { return $LAYOUT().byteSize(); }
-    public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
-    public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
-        return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
+
+    /**
+     * Allocate an array of size {@code elementCount} using {@code allocator}.
+     * The returned segment has size {@code elementCount * layout().byteSize()}.
+     */
+    public static MemorySegment allocateArray(long elementCount, SegmentAllocator allocator) {
+        return allocator.allocate(MemoryLayout.sequenceLayout(elementCount, layout()));
     }
-    public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
+
+    /**
+     * Reinterprets {@code addr} using target {@code arena} and {@code cleanupAction} (if any).
+     * The returned segment has size {@code layout().byteSize()}
+     */
+    public static MemorySegment reinterpret(MemorySegment addr, Arena arena, Consumer<MemorySegment> cleanup) {
+        return reinterpret(addr, 1, arena, cleanup);
+    }
+
+    /**
+     * Reinterprets {@code addr} using target {@code arena} and {@code cleanupAction} (if any).
+     * The returned segment has size {@code elementCount * layout().byteSize()}
+     */
+    public static MemorySegment reinterpret(MemorySegment addr, long elementCount, Arena arena, Consumer<MemorySegment> cleanup) {
+        return addr.reinterpret(layout().byteSize() * elementCount, arena, cleanup);
+    }
 }
-
 
